client/src/pages/tasks/style.css
.tasks {
    width: 100%;
    padding-left: 10px;
    height: 90%;
    position: relative;
}

.app-container {
    margin-top: 70px !important;
}

.tasks .task-header {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: space-between;
    position: sticky;
    top: 0px;
    background-color: black;
    z-index: 9999;
}

.tasks .all-tasks {
    display: grid;
    gap: 1rem;
    grid-template-columns: 1fr 1fr 1fr;
    height: 100%;
    overflow-y: auto;
    overflow-x: hidden;
}

.tasks ::-webkit-scrollbar {
    width: 0px;
}

.all-tasks .custom-card {
    height: 100%;
}

.tasks .task-container #stats-card {
    border: 2px solid #ff0055;
}

.tasks .task-container #user-stats {
    border: 2px solid #00ff62;
}

.task-container .CircularProgressbar .CircularProgressbar-text {
    font-size: 25px !important;
}

@media (max-width: 768px) {
    .tasks {
        height: auto;
    }

    .tasks .main-header {
        display: none;
    }

    .tasks .task-header {
        flex-direction: column;
        gap: 1.3rem;
        padding-top: 1rem;
        padding-bottom: 2rem;
    }

    .task-container {
        display: flex;
        flex-direction: column;
        gap: 1rem;
        margin-top: 0;
    }

    .tasks .all-tasks {
        grid-template-columns: 1fr;
        gap: 0.5rem;
        width: 98% !important;
    }

    .tasks .stats {
        width: 98% !important;
    }

    .tasks .task-container #stats-card {
        width: 98%;
    }

    .tasks .task-container #user-stats {
        width: 98%;
    }
}

